RESOLVED FIXED176259
Wrong getComputedStyle result for pseudo-elements in display: none subtrees.
https://bugs.webkit.org/show_bug.cgi?id=176259
Summary Wrong getComputedStyle result for pseudo-elements in display: none subtrees.
Emilio Cobos Álvarez (:emilio)
Reported 2017-09-01 17:23:19 PDT
This is making other test-cases of getComputedStyle-pseudo.html fail.
Attachments
Patch (8.04 KB, patch)
2017-09-01 17:33 PDT, Emilio Cobos Álvarez (:emilio)
no flags
Patch (11.18 KB, patch)
2017-09-01 18:05 PDT, Emilio Cobos Álvarez (:emilio)
no flags
Emilio Cobos Álvarez (:emilio)
Comment 1 2017-09-01 17:33:02 PDT
Emilio Cobos Álvarez (:emilio)
Comment 2 2017-09-01 17:33:31 PDT
Antti, could you review? Thanks!
Emilio Cobos Álvarez (:emilio)
Comment 3 2017-09-01 18:05:43 PDT
WebKit Commit Bot
Comment 4 2017-09-02 19:31:16 PDT
Comment on attachment 319682 [details] Patch Clearing flags on attachment: 319682 Committed r221542: <http://trac.webkit.org/changeset/221542>
WebKit Commit Bot
Comment 5 2017-09-02 19:31:18 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-09-27 12:54:10 PDT
Note You need to log in before you can comment on or make changes to this bug.