Wrong getComputedStyle result for pseudo-elements in display: none subtrees. https://bugs.webkit.org/show_bug.cgi?id=176259

Patch by Emilio Cobos Álvarez <emilio@crisal.io> on 2017-09-02
Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/cssom/getComputedStyle-pseudo-expected.txt:

Source/WebCore:

Before this patch, we were wrongly returning the parent style when there wasn't
a cached pseudo style.

With this, the only remaining failures in getComputedStyle-pseudo is a
serialisation bug for the "content" property, and the display: contents test,
which is because we don't support pseudo-elements of display: contents elements
yet.

Tests: imported/w3c/web-platform-tests/cssom/getComputedStyle-pseudo.html

* dom/Document.cpp:
(WebCore::Document::styleForElementIgnoringPendingStylesheets):
* dom/Document.h:
* dom/Element.cpp:
(WebCore::Element::resolvePseudoElementStyle):
(WebCore::Element::computedStyle):
* dom/Element.h:

Canonical link: https://commits.webkit.org/192923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221542 268f45cc-cd09-0410-ab3c-d52691b4dbfc