Source/WebCore/dom/Element.h
@@ -646,6 +646,7 @@ private:
     void removeShadowRoot();
 
     const RenderStyle& resolveComputedStyle();
+    const RenderStyle& resolvePseudoElementStyle(PseudoId);
 
     bool rareDataStyleAffectedByEmpty() const;
     bool rareDataStyleAffectedByFocusWithin() const;
